# calendar-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  smoke_oauth.py
calendar_agent/: gcal_tools.py  google_auth.py  planner.py  smoke_create_events.py  smoke_event_drafts.py  smoke_freebusy.py  smoke_planner.py  smoke_tools.py  token_store.py
calendar_agent/planning/: preferences.py
calendar_agent/web/: api.py
docs/releases/: v0.6.md.save
tests/: test_planner_v05.py  test_preferences.py
