[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-agent"
version = "0.6.0"
description = "AI Calendar Agent (deterministic scheduling baseline)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
include = ["calendar_agent*"]
